# DealSignal

./: .env.example  .gitignore  .gitleaksignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.staging.yml  docker-compose.yml  eslint.config.js  opencode.jsonc  package.json  pnpm-lock.yaml  tsconfig.json
docs/templates/: ACCESSIBILITY-CONFORMANCE-template-v1.md  ADR-template-v1.md  AGENT-TASK-template-v2.md  API-DEPRECATION-POLICY-template-v1.md  API-SPEC-template-v1.md  ARCHITECTURE-DIAGRAMS-template-v1.md  CHANGE-REQUEST-template-v1.md  CHANGELOG-template-v1.md  CODE-REVIEW-template-v1.md  COMPETITIVE-ANALYSIS-LIGHT-template-v1.md  COMPETITIVE-ANALYSIS-template-v1.md  COMPLIANCE-template-v1.md  DATA-MIGRATION-template-v1.md  DATABASE-MODEL-template-v1.md  DEPLOYMENT-LOG-template-v1.md  DESIGN-SYSTEM-template-v1.md  DISASTER-RECOVERY-PLAN-template-v1.md  ENVIRONMENT-CONFIG-template-v1.md  EVENT-TRACKING-template-v1.md  FEATURE-FLAG-template-v1.md  FRONTEND-COMPONENT-GUIDE-template-v1.md  GTM-LIGHT-template-v1.md  GTM-template-v1.md  IMPLEMENTATION-PLAN-ISSUES-template-v1.md  IMPLEMENTATION-PLAN-template-v1.md  INCIDENT-RESPONSE-template-v1.md  LLM-PROMPT-SPEC-template-v1.md  PERFORMANCE-TEST-PLAN-template-v1.md  PRD-LIGHT-template-v1.md  PRD-REVIEW-CHECKLIST-template-v1.md  PRD-template-v2.md  QA-TEST-PLAN-template-v1.md  QA-TEST-REPORT-template-v1.md  README.md  RELEASE-NOTES-template-v1.md  ROLLBACK-PLAN-template-v1.md  RUNBOOK-template-v1.md  SECURITY-TEST-PLAN-template-v1.md  SLO-SERVICE-LEVEL-template-v1.md  STRATEGY-LIGHT-template-v1.md  (+14 more)
(+1166 files in other folders)
